--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "devDependencies": {
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.5",
+    "ts-node": "^10.9.1",
+    "type-fest": "^4.1.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "ajv": "^8.12.0",
     "ajv-formats": "3.0.0-rc.0",
     "lodash": "^4.17.21",
-    "ts-node": "^10.9.1",
-    "type-fest": "^4.0.0",
+    "moment": "^2.29.4",
     "yaml": "^2.3.1"
   }
 }
